--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -263,6 +263,33 @@
                   <a class="box" href="https://www.citybett.com/#/dash" target="_blank">
                     <img src="/assets/partner-logo-new/citybett.webp" alt="invalid" class="img-fluid partner-image copy">
                   </a>
+
+                  <a class="box" href="https://www.agun365.win/#/dash" target="_blank">
+                    <img src="/assets/partner-logo-new/agun365.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a class="box" href="https://www.9ex365.bet/#/dash" target="_blank">
+                    <img src="/src/assets/partner-logo-new/ex3659.png" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a class="box" href="https://www.betguru.win/#/dash" target="_blank">
+                    <img src="/assets/partner-logo-new/betguru.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a class="box" href="https://www.playbdt.live/#/dash" target="_blank">
+                    <img src="/assets/partner-logo-new/playbdt.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a class="box" href="https://www.betgame.live/#/dash" target="_blank">
+                    <img src="/assets/partner-logo-new/betguru.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+                  <a class="box" href="https://www.mpk.live/#/dash" target="_blank">
+                    <img src="/assets/partner-logo-new/mpk.webp" alt="invalid" class="img-fluid partner-image copy">
+                  </a>
+
+
+
                   
                 </div>
              </div>
