--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -33,7 +33,7 @@
         </div>
         <div class="comp_col_1 ">
           <a target="_blank" href="https://www.gamstop.co.uk/">
-            <img class="comp_3 secondcomp_col_1" src="https://b2c.static112233.com/assets/images/gamecare.png" style="width:88px; "/>
+            <img class="comp_3 secondcomp_col_1" src="https://b2c.static112233.com/assets/images/gamecare.png" style="width:88px;margin-left: 74px; "/>
           </a>
         </div>
         <!-- <div class="comp_col_1">
