--- a/src/app/lottery-games/lottery-games.component.css
+++ b/src/app/lottery-games/lottery-games.component.css
@@ -95,7 +95,7 @@ font-size: calc(285.7%);
     padding-right: 0;
     padding-bottom: 0;
     padding-left: 0;
-    font-size: 1em;
+    font-size: 16px;
     width: 96%;
 }
 
@@ -571,7 +571,7 @@ background-color: #a0c528 !important;
 }
 
 .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-  --bs-gutter-x: 0.5rem;
+  --bs-gutter-x: 0.5em;
   --bs-gutter-y: 0;
   width: 100%;
   padding-right: calc(var(--bs-gutter-x) * .5);
@@ -592,21 +592,21 @@ background-color: #a0c528 !important;
   --bs-accordion-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out,border-radius 0.15s ease;
   --bs-accordion-border-color: var(--bs-border-color);
   --bs-accordion-border-width: 1px;
-  --bs-accordion-border-radius: 0.375rem;
-  --bs-accordion-inner-border-radius: calc(0.375rem - 1px);
-  --bs-accordion-btn-padding-x: 1.25rem;
-  --bs-accordion-btn-padding-y: 1rem;
+  --bs-accordion-border-radius: 0.375em;
+  --bs-accordion-inner-border-radius: calc(0.375em - 1px);
+  --bs-accordion-btn-padding-x: 1.25em;
+  --bs-accordion-btn-padding-y: 1em;
   --bs-accordion-btn-color: #212529;
   --bs-accordion-btn-bg: var(--bs-accordion-bg);
   --bs-accordion-btn-icon: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#fffff'%3e%3cpath fill-rule='white' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
-  --bs-accordion-btn-icon-width: 1.25rem;
+  --bs-accordion-btn-icon-width: 1.25em;
   --bs-accordion-btn-icon-transform: rotate(-180deg);
   --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
   --bs-accordion-btn-active-icon: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%230c63e4'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
   --bs-accordion-btn-focus-border-color: #86b7fe;
-  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
-  --bs-accordion-body-padding-x: 1.25rem;
-  --bs-accordion-body-padding-y: 1rem;
+  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25em rgba(13, 110, 253, 0.25);
+  --bs-accordion-body-padding-x: 1.25em;
+  --bs-accordion-body-padding-y: 1em;
   --bs-accordion-active-color: white;
   --bs-accordion-active-bg: #e7f1ff;
 }
@@ -748,7 +748,7 @@ nav{
     }
   
     .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-      --bs-gutter-x: 0.5rem !important;
+      --bs-gutter-x: 0.5em !important;
       --bs-gutter-y: 0;
       width: 100%;
       padding-right: calc(var(--bs-gutter-x) * .5);
@@ -758,7 +758,7 @@ nav{
   }
   .navbar-nav {
     --bs-nav-link-padding-x: 0;
-    --bs-nav-link-padding-y: 0.5rem;
+    --bs-nav-link-padding-y: 0.5em;
     --bs-nav-link-font-weight: ;
     --bs-nav-link-color: var(--bs-navbar-color);
     --bs-nav-link-hover-color: var(--bs-navbar-hover-color);
@@ -789,21 +789,21 @@ nav{
     --bs-accordion-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out,border-radius 0.15s ease;
     --bs-accordion-border-color: var(--bs-border-color);
     --bs-accordion-border-width: 1px;
-    --bs-accordion-border-radius: 0.375rem;
-    --bs-accordion-inner-border-radius: calc(0.375rem - 1px);
-    --bs-accordion-btn-padding-x: 1.25rem;
-    --bs-accordion-btn-padding-y: 1rem;
+    --bs-accordion-border-radius: 0.375em;
+    --bs-accordion-inner-border-radius: calc(0.375em - 1px);
+    --bs-accordion-btn-padding-x: 1.25em;
+    --bs-accordion-btn-padding-y: 16px;
     --bs-accordion-btn-color: #212529;
     --bs-accordion-btn-bg: var(--bs-accordion-bg);
     --bs-accordion-btn-icon: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
-    --bs-accordion-btn-icon-width: 1.25rem;
+    --bs-accordion-btn-icon-width: 1.25em;
     --bs-accordion-btn-icon-transform: rotate(-180deg);
     --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
     --bs-accordion-btn-active-icon: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%230c63e4'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
     --bs-accordion-btn-focus-border-color: #86b7fe;
-    --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
-    --bs-accordion-body-padding-x: 1.25rem;
-    --bs-accordion-body-padding-y: 1rem;
+    --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25em rgba(13, 110, 253, 0.25);
+    --bs-accordion-body-padding-x: 1.25em;
+    --bs-accordion-body-padding-y: 1em;
     --bs-accordion-active-color: #a4c724 !important;
     --bs-accordion-active-bg: #e7f1ff;
   }
@@ -1114,7 +1114,7 @@ background-color: #a0c528 !important;
 }
 
 .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-  --bs-gutter-x: 0.5rem;
+  --bs-gutter-x: 0.5em;
   --bs-gutter-y: 0;
   width: 100%;
   padding-right: calc(var(--bs-gutter-x) * .5);
@@ -1135,21 +1135,21 @@ background-color: #a0c528 !important;
   --bs-accordion-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out,border-radius 0.15s ease;
   --bs-accordion-border-color: var(--bs-border-color);
   --bs-accordion-border-width: 1px;
-  --bs-accordion-border-radius: 0.375rem;
-  --bs-accordion-inner-border-radius: calc(0.375rem - 1px);
-  --bs-accordion-btn-padding-x: 1.25rem;
-  --bs-accordion-btn-padding-y: 1rem;
+  --bs-accordion-border-radius: 0.375em;
+  --bs-accordion-inner-border-radius: calc(0.375em - 1px);
+  --bs-accordion-btn-padding-x: 1.25em;
+  --bs-accordion-btn-padding-y: 1em;
   --bs-accordion-btn-color: #212529;
   --bs-accordion-btn-bg: var(--bs-accordion-bg);
   --bs-accordion-btn-icon: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='#fffff'%3e%3cpath fill-rule='white' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
-  --bs-accordion-btn-icon-width: 1.25rem;
+  --bs-accordion-btn-icon-width: 1.25em;
   --bs-accordion-btn-icon-transform: rotate(-180deg);
   --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
   --bs-accordion-btn-active-icon: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%230c63e4'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
   --bs-accordion-btn-focus-border-color: #86b7fe;
-  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
-  --bs-accordion-body-padding-x: 1.25rem;
-  --bs-accordion-body-padding-y: 1rem;
+  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25em rgba(13, 110, 253, 0.25);
+  --bs-accordion-body-padding-x: 1.25em;
+  --bs-accordion-body-padding-y: 1em;
   --bs-accordion-active-color: white;
   --bs-accordion-active-bg: #e7f1ff;
 }
@@ -1293,7 +1293,7 @@ color: gray;
   }
 
   .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
-    --bs-gutter-x: 0.5rem !important;
+    --bs-gutter-x: 0.5em !important;
     --bs-gutter-y: 0;
     width: 100%;
     padding-right: calc(var(--bs-gutter-x) * .5);
@@ -1303,7 +1303,7 @@ color: gray;
 }
 .navbar-nav {
   --bs-nav-link-padding-x: 0;
-  --bs-nav-link-padding-y: 0.5rem;
+  --bs-nav-link-padding-y: 0.5em;
   --bs-nav-link-font-weight: ;
   --bs-nav-link-color: var(--bs-navbar-color);
   --bs-nav-link-hover-color: var(--bs-navbar-hover-color);
@@ -1334,21 +1334,21 @@ color: gray;
   --bs-accordion-transition: color 0.15s ease-in-out,background-color 0.15s ease-in-out,border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out,border-radius 0.15s ease;
   --bs-accordion-border-color: var(--bs-border-color);
   --bs-accordion-border-width: 1px;
-  --bs-accordion-border-radius: 0.375rem;
-  --bs-accordion-inner-border-radius: calc(0.375rem - 1px);
-  --bs-accordion-btn-padding-x: 1.25rem;
-  --bs-accordion-btn-padding-y: 1rem;
+  --bs-accordion-border-radius: 0.375em;
+  --bs-accordion-inner-border-radius: calc(0.375em - 1px);
+  --bs-accordion-btn-padding-x: 1.25em;
+  --bs-accordion-btn-padding-y: 1em;
   --bs-accordion-btn-color: #212529;
   --bs-accordion-btn-bg: var(--bs-accordion-bg);
   --bs-accordion-btn-icon: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23212529'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
-  --bs-accordion-btn-icon-width: 1.25rem;
+  --bs-accordion-btn-icon-width: 1.25em;
   --bs-accordion-btn-icon-transform: rotate(-180deg);
   --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
   --bs-accordion-btn-active-icon: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%230c63e4'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e);
   --bs-accordion-btn-focus-border-color: #86b7fe;
-  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
-  --bs-accordion-body-padding-x: 1.25rem;
-  --bs-accordion-body-padding-y: 1rem;
+  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25em rgba(13, 110, 253, 0.25);
+  --bs-accordion-body-padding-x: 1.25em;
+  --bs-accordion-body-padding-y: 1em;
   --bs-accordion-active-color: #a4c724 !important;
   --bs-accordion-active-bg: #e7f1ff;
 }
@@ -1563,7 +1563,7 @@ color: #fff;
 }
 
 .index4-para{
-    font-size: 1rem;
+    font-size: 16px;
     font-weight: 300;
     line-height: 1.8;
     color: rgb(87,87,86);
@@ -2540,7 +2540,7 @@ line-height: 30px;
 
 .cashout-section6{
 border: 1px solid transparent;
-    font-size: 1em;
+    font-size: 16px;
     padding: 28px 28px;
     word-wrap: break-word;
     border-color: #f0f0f0;
