--- a/src/app/esport/esport.component.html
+++ b/src/app/esport/esport.component.html
@@ -113,7 +113,7 @@
 <section>
     <div class="easy-setup-main">
         <div class="easy-setup-col1-photo">
-<img src="assets/VRNL 1.webp" alt="">
+<img src="assets/VRNL 1-1.jpg" alt="">
         </div>
 
         <div class="easy-setup-col2">
