--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1006,7 +1006,7 @@ But we are constantly adding new markets.
                         </div>
                       </div>
                     </div>
-                    <div class="accordion-item">
+                    <!-- <div class="accordion-item">
                       <h3
                         data-bs-toggle="collapse"
                         data-bs-target="#collapse_25"
@@ -1030,8 +1030,8 @@ But we are constantly adding new markets.
                           </p>
                         </div>
                       </div>
-                    </div>
-                    <div class="accordion-item">
+                    </div> -->
+                    <!-- <div class="accordion-item">
                       <h3
                         data-bs-toggle="collapse"
                         data-bs-target="#collaps_34"
@@ -1057,7 +1057,7 @@ But we are constantly adding new markets.
                           </p>
                         </div>
                       </div>
-                    </div>
+                    </div> -->
                     <div class="accordion-item">
                       <h3
                         data-bs-toggle="collapse"
