--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -528,7 +528,7 @@
       </p>
     </div>
   </section> -->
-
+<!-- 
   <section>
     <h3 class="q_header">Other questions?</h3>
 
@@ -572,7 +572,7 @@
         </p>
       </div>
     </div>
-  </section>
+  </section> -->
 
   
   <!-- <div>
