--- a/src/app/live-casino/live-casino.component.html
+++ b/src/app/live-casino/live-casino.component.html
@@ -157,8 +157,69 @@
 </div>
 </section>
 </div>
+<app-contact-component2></app-contact-component2>
 
-
-
+<div class="side-slider contact-service-box">
+	<button class="slide-btn">
+		<img src="assets\24hrcall.png" alt="contact">
+	</button>
+	<div class="side-slider-content">
+		<!-- <div class="contact-service-icon">
+			<img src="/images/web/icon-set/customers-slider/cs-247.png" alt="contact">
+		</div> -->
+		<!-- <div class="contact-service-logo">
+			<img src="/images/web/icon-set/customers-slider/cs_logo.png" alt="logo">
+		</div> -->
+		<ul id="side-cs-cont" class="contact-service-list"><li id="cs-44" class="icon-cs">
+			<a target="_blank">
+				<img src="https://img.c88rx.com/upload/customerservice/image_84.png" ui-key="realIconPath">
+				<span ui-key="displayText">Live Chat 24/7</span>
+				
+			</a>
+			
+			<hr>
+		</li><li id="cs-46" class="icon-telegram">
+			<!-- <a target="_blank">
+				<img src="https://img.c88rx.com/upload/customerservice/image_85.png" ui-key="realIconPath">
+				<span ui-key="displayText">Telegram Support</span>
+				
+			</a> -->
+			
+			<hr>
+		</li><li id="cs-143" class="icon-telegram">
+			<!-- <a target="_blank">
+				<img src="https://img.c88rx.com/upload/customerservice/image_361.png" ui-key="realIconPath">
+				<span ui-key="displayText">Telegram Channel</span>
+				
+			</a> -->
+			
+			<hr>
+		</li><li id="cs-145" class="icon-fb">
+			<a target="_blank">
+				<img src="https://img.c88rx.com/upload/customerservice/image_363.png" ui-key="realIconPath">
+				<span ui-key="displayText">Facebook Messenger</span>
+				
+			</a>
+			
+			<hr>
+		</li><li id="cs-45" class="icon-mail">
+			<a target="_blank" href="mailto:support@crickex.com">
+				<img src="https://img.c88rx.com/upload/customerservice/image_65.png" ui-key="realIconPath">
+				<span ui-key="displayText">Support Email</span>
+				
+			</a>
+			
+			<hr>
+		</li><li id="cs-81" class="icon-mail">
+			<a target="_blank" href="mailto:marketing@crickex.com">
+				<img src="https://img.c88rx.com/upload/customerservice/image_141.png" ui-key="realIconPath">
+				<span ui-key="displayText">Marketing Email</span>
+				
+			</a>
+			
+			<hr>
+		</li></ul>
+	</div>
+</div>
 <app-footers2></app-footers2>
 
