--- a/src/app/contact-com/contact-com.component.css
+++ b/src/app/contact-com/contact-com.component.css
@@ -18,6 +18,7 @@
     color: #686868;
     font-size: 16px;
     width: 95%;
+   font-weight: 350;
 }
 .contact_header{
     font-weight: 600;
@@ -67,7 +68,7 @@ color: #000;
 }
 .name_label{
 font-weight: 900;
-font-size: 18px;
+font-size: 16px;
 color: #000;
 }
 .email_input input{
