--- a/src/app/online-sportsbook/online-sportsbook.component.html
+++ b/src/app/online-sportsbook/online-sportsbook.component.html
@@ -40,7 +40,7 @@
     </div>
 
 <div class="sports_book_col_1">
-<img class="kohli_images" src="assets/sirplay sportbook 1.webp" width="410" height="504">
+<img class="kohli_images" src="assets/online-vrnl-2.webp" width="410" height="504">
 </div>
 
 </div>
