--- a/src/assets/css/bootstrap.css
+++ b/src/assets/css/bootstrap.css
@@ -1653,6 +1653,7 @@ html {
     display: inline-block;
     margin-bottom: 5px;
     font-weight: bold;
+    font-size: 16px;
   }
   input[type="search"] {
     -webkit-box-sizing: border-box;
