--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
     <nav>
       <div class="nav_row">
         <div class="nav_col">
-          <a href="/index.html"><img src="assets/sirplay.logo.png" /></a>
+          <a ><img class="vrnl_logo" src="assets/VRNL new.png" /></a>
         </div>
         <div class="nav_col_2">
           <div class="nav_row_2">
@@ -448,3 +448,4 @@
 </div>
 
 <!-- responsive header end -->
+
