--- a/src/app/main-sec/main-sec.component.css
+++ b/src/app/main-sec/main-sec.component.css
@@ -168,7 +168,10 @@ transition: all .4s ease-in-out 0s;
     height: 77px;
 }
 .header_plat{
-font-weight: 600;
+font-family: Poppins;
+    line-height: 20px;
+    font-weight: 600;
+    font-size: 20px;
 }
 .platform_anchor{
     color: #a0c528;
@@ -207,7 +210,7 @@ border-color: #000;
     .platform_row{
         display: flex;
       flex-direction: column;
-      gap: 30px;
+      gap: 0px !important;
     }
 .main_sec{
     margin-top: 90px;
@@ -611,13 +614,15 @@ padding-top: 80PX;
     line-height: 1.5;
     font-family: 'Poppins', sans-serif;
 }
-.platform_sec{
-    padding-top: 80px;
-}
+
 @media (max-width:820px){
     .crypto_row{
         display: flex;
       flex-direction: column;
+    }
+    .platform_sec{
+        
+        padding-bottom: 0px !important ;
     }
     .crypto_col {
         width: 92%;
