--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -11,8 +11,8 @@
     padding: 10px 5px;
     border: 0;
     border-radius: 5px 0 0 5px;
-    background: #31c900;;
-    box-shadow: 1px 1px 7px rgba(69, 255, 109, 0.9);
+    background:#a0c528;
+    box-shadow: 1px 1px 7px rgba(56, 114, 69, 0.9);
     cursor: pointer
   }
   
