--- a/src/app/live-casino/live-casino.component.html
+++ b/src/app/live-casino/live-casino.component.html
@@ -157,7 +157,7 @@
 </div>
 </section>
 </div>
-<app-contact-component2></app-contact-component2>
+<!-- <app-contact-component2></app-contact-component2> -->
 
 <div class="side-slider contact-service-box">
 	<button class="slide-btn">
