--- a/src/app/footers2/footers2.component.css
+++ b/src/app/footers2/footers2.component.css
@@ -17,6 +17,9 @@
 .footer_col_2{
     width: 18%;
 }
+.footer_row{
+    margin-left: 99px;
+ }
 .footer_col_3{
     width: 18%;
 }
@@ -142,7 +145,9 @@ color: #fff;
     }
     
     
-    
+    .footer_row{
+        margin-left: 0px;
+     }
     
     .right-img-index3 img {
         margin-top: 8%;
@@ -220,6 +225,9 @@ color: #fff;
             flex-direction: column;
             gap:48px
         }
+        .footer_row{
+            margin-left: 0px;
+         }
         /* .footer_col{
             margin-left: 32px;
         } */
@@ -231,5 +239,7 @@ color: #fff;
         .comp_1 {
             width: 63px;
         }
+        .footer_row{
+            margin-left:0px;
+         }
     }
- 
