--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -1117,3 +1117,271 @@ But we are constantly adding new markets.
     </div>
   </section>
 <!-- vrnl question for playstreaming end -->
+
+
+
+
+<!-- vrnl question for playstreaming start -->
+<section>
+    <div
+      id="accordionExample"
+      class="x-section e255-e74 m73-0 m73-3 m73-7 accordion"
+    >
+      <div
+        class="x-row x-container max width e255-e78 m73-9 m73-a m73-c m73-d m73-g m73-k m73-l m73-z"
+      >
+        <div class="x-row-inner">
+          <div class="x-col e255-e79 m73-10 m73-11 m73-12">
+            <div class="x-div e255-e80 m73-2c">
+              <div
+                class="x-text x-content e255-e81 m73-1s m73-1w m73-20 m73-21 m73-27"
+              >
+                <p style="text-align: left"></p>
+                <div class="wp-faq-schema-wrap wp-faq-schema-">
+                  <h2>FAQs  about Live Casino</h2>
+                  <div
+                    role="tablist"
+                    class="wp-faq-schema-items ui-accordion ui-widget ui-helper-reset"
+                  >
+                    <!-- <div class="accordion-item">
+                      <h3
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapse_29"
+                        aria-expanded="false"
+                        aria-controls="collapse_29"
+                        class="ui-accordion-header ui-corner-top ui-corner-all ui-state-default ui-accordion-icons collapsed"
+                      >
+                        <span
+                          class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"
+                        ></span>
+                        What is Playstream?
+
+                      </h3>
+                      <div
+                        id="collapse_29"
+                        class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content accordion-collapse collapse"
+                      >
+                        <div class="accordion-body">
+                          <p>
+                            Playstream is a powerful live streaming service that allows you to stream live content to your gaming platform as well as to multiple streaming .
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- <div class="accordion-item">
+                      <h3
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapse_30"
+                        aria-expanded="false"
+                        aria-controls="collapse_30"
+                        class="ui-accordion-header ui-corner-top ui-corner-all ui-state-default ui-accordion-icons collapsed"
+                      >
+                        <span
+                          class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"
+                        ></span
+                        >
+                        Do I need any special equipment to use?
+                      </h3>
+                      <div
+                        id="collapse_30"
+                        class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content accordion-collapse collapse"
+                      >
+                        <div class="accordion-body">
+                          <p>
+                            You don’t need any special equipment to use, just a standard webcam and microphone. Depending on how you use Playstream, you may also need streaming software or an encoder. However, you don’t need any software to go live with Playstream Studio.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h3
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapse_31"
+                        aria-expanded="false"
+                        aria-controls="collapse_31"
+                        class="ui-accordion-header ui-corner-top ui-corner-all ui-state-default ui-accordion-icons collapsed"
+                      >
+                        <span
+                          class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"
+                        ></span
+                        >Can I customize the live stream?
+                      </h3>
+                      <div
+                        id="collapse_31"
+                        class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content accordion-collapse collapse"
+                      >
+                        <div class="accordion-body">
+                          <p>
+                            Sure. you can have custom Live Streams with your own graphics (overlays, logos and backgrounds), you can prepare your own film set and much more.
+                          </p>
+                        </div>
+                      </div>
+                    </div> -->
+                 <div class="accordion-item">
+                      <h3
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapse_36"
+                        aria-expanded="false"
+                        aria-controls="collapse_36"
+                        class="ui-accordion-header ui-corner-top ui-corner-all ui-state-default ui-accordion-icons collapsed"
+                      >
+                        <span
+                          class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"
+                        ></span>
+                        What is a turnkey casino software?
+  
+                      </h3>
+                      <div
+                        id="collapse_36"
+                        class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content accordion-collapse collapse"
+                      >
+                        <div class="accordion-body">
+                          <p>
+                            A turnkey casino software is a solution ready to go live and your players will have the chance to play as in real casino. Your players will never get bored with more than 150 providers and different games such as live casino, lottery, virtual games and many other.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h3
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collapse_37"
+                        aria-expanded="false"
+                        aria-controls="collapse_37"
+                        class="ui-accordion-header ui-corner-top ui-corner-all ui-state-default ui-accordion-icons collapsed"
+                      >
+                        <span
+                          class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"
+                        ></span
+                        >What is a casino white label casino software?
+                      </h3>
+                      <div
+                        id="collapse_37"
+                        class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content accordion-collapse collapse"
+                      >
+                        <div class="accordion-body">
+                          <p>
+                            A casino software white label solution is the perfect solution for the operators who want to work with online casinos.  Thanks to its experience, Sirplay casino white label, will offer certified and secure casino games. Sirplay Casino white label allows you to customize the casino based on your favourite language and currency.
+                          </p>
+                        </div>
+                      </div>
+                    </div>
+                   
+                    <div class="accordion-item">
+                      <h3
+                        data-bs-toggle="collapse"
+                        data-bs-target="#collaps_38"
+                        aria-expanded="false"
+                        aria-controls="collaps_38"
+                        class="ui-accordion-header ui-corner-top ui-corner-all ui-state-default ui-accordion-icons collapsed"
+                      >
+                        <span
+                          class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"
+                        ></span
+                        >What do we offer as casino software provider?
+
+                      </h3>
+                      <div
+                        id="collaps_38"
+                        class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content accordion-collapse collapse"
+                      >
+                        <div class="accordion-body">
+                         <ul style="font-family: 'Poppins'; font-size: 16px; text-align: start;">
+                            <li>
+                                Excellent affiliate marketing tools, and profitable referral system
+
+                            </li>
+                            <li>
+                                Accessible social media platform, Mobile and Web Pop-up messages, and In-Application Informing
+
+                            </li>
+                            <li>
+                                Strong Registration and Verification for Player Record Controls and detection algorithm for Fraudulent Accounts
+
+                            </li>
+                            <li>
+                                Detection of instant IP address area data via geolocation tools
+
+                            </li>
+                         </ul>
+                        </div>
+                      </div>
+                    </div>
+             
+                    <div class="accordion-item">
+                        <h3
+                          data-bs-toggle="collapse"
+                          data-bs-target="#collaps_39"
+                          aria-expanded="false"
+                          aria-controls="collaps_39"
+                          class="ui-accordion-header ui-corner-top ui-corner-all ui-state-default ui-accordion-icons collapsed"
+                        >
+                          <span
+                            class="ui-accordion-header-icon ui-icon ui-icon-triangle-1-e"
+                          ></span
+                          >What are the affiliate systems on the Casino Software?
+
+  
+                        </h3>
+                        <div
+                          id="collaps_39"
+                          class="ui-accordion-content ui-corner-bottom ui-helper-reset ui-widget-content accordion-collapse collapse"
+                        >
+                          <div class="accordion-body">
+
+                            <p>
+                                Indeed, there are 3 different levels on the sports betting software network that is accessible:
+
+
+                            </p>
+                            <br>
+                           <ul style="font-family: 'Poppins'; font-size: 16px; text-align: start;">
+
+                              <li style="font-weight: bold;">
+                                What are the affiliate systems on the Casino Software?
+
+  
+                              </li>
+                              <p>This level is the admittance to the backend. Likewise, it makes different gets to the Administrative center with restricted honors and permissions is additionally conceivable.</p>
+                              <li style="font-weight: bold;">
+                                Cashier Level
+  
+                              </li>
+                              <p>
+                                This level suitably describes betting shops’ representatives, ready to engage bets without acquiring any commissions.
+
+                              </p>
+                              <li style="font-weight: bold;">
+                                Online player Level
+
+  
+                              </li>
+                              <p>
+                                This level denotes players who have an account by registering at the betting game online or at a shop, and also place bets.
+
+                              </p>
+                            
+                           </ul>
+                          </div>
+                        </div>
+                      </div>
+                  </div>
+                </div>
+                <p></p>
+              </div>
+            </div>
+            <div class="x-text x-text-headline e255-e82 m73-1g m73-1j">
+              <div class="x-text-content">
+                <!-- <div class="x-text-content-text">
+                  <h3 class="x-text-content-text-primary">
+                    <strong>Other questions?</strong>
+                  </h3>
+                </div> -->
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+<!-- vrnl question for playstreaming end -->
