--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -200,7 +200,7 @@
                 aria-expanded="false"
                 aria-controls="flush-collapseOne"
               >
-                <a href="/index.html">Home</a>
+                <a routerLink="/">Home</a>
               </button>
             </h2>
             <!-- <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
