--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -295,6 +295,32 @@
     </div>
   </section>
 
+
+  <section class="integration_sec">
+    <div class="integration_row">
+      <div class="integration_col">
+        <h1 class="virtual_header">virtual games
+        </h1>
+        <h1 class="virtual_header_1">Online and retail
+        </h1>
+        <p class="integration_para">
+          Virtual Gaming allows your players
+          <span class="inte_bold">
+            <b>to enjoy the live experience of every challenge or bet</b></span
+          >
+          Additionally, the Virtual Gaming module is available for both online and land-based bookmakers based on iFrame and API
+        </p>
+
+        <br />
+        <br />
+        <div class="white_back"></div>
+      </div>
+      <div class="integration_col_1">
+<img class="virtual_img" src="assets/virtual-games.png.webp">
+      </div>
+    </div>
+  </section>
+
   <section class="starting_sec">
     <div class="starting_row">
       <div class="start_details">
