--- a/src/app/whitelabel/whitelabel.component.css
+++ b/src/app/whitelabel/whitelabel.component.css
@@ -14,6 +14,7 @@
     padding-left: 15px;
     padding-right: 15px;
 }
+
 .white-label{
     padding: 80px 0px;
     
@@ -55,6 +56,7 @@
     margin-top: 44px;
     /* padding-left: 51px; */
     color: #000;
+    font-weight: 350
 }
 p{
     font-size: 16px;
@@ -69,6 +71,7 @@ p {
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     color: #403939;
+    font-weight: 350;
     
 }
 .head-custom h1{
@@ -80,7 +83,9 @@ p {
     line-height: 91px;
     text-align: left;
 }
-
+.dash{
+    font-size: 18px;
+}
 h2 {
     display: block;
     font-size: 1.5em;
@@ -222,7 +227,7 @@ h2 {
     }
     .home{
         font-size: 18px;
-        font-weight: 400;
+        font-weight: 350;
         display: grid;
     }
     .dash{
@@ -282,6 +287,7 @@ p{
 .label-para{
     padding-left: 0px;
     padding-right: 0px;
+    font-weight: 350;
 }
 .risk-para h1,.risk-para h2,.risk-para p  {
     padding: 0px;
