--- a/src/app/casino-games/casino-games.component.html
+++ b/src/app/casino-games/casino-games.component.html
@@ -84,7 +84,7 @@
 <section class="container10">
     <div class="index3-main-div">
         <div class="index3-left-img">
-            <img class="container_10_img" src="assets/sirplay vrnl 25.webp" alt="">
+            <img class="container_10_img" src="assets/VRNL 3.webp" alt="">
         </div>
     
         <div class="index3-right-text">
