--- a/src/app/sportbet/sportbet.component.css
+++ b/src/app/sportbet/sportbet.component.css
@@ -2493,7 +2493,7 @@ width: 97%;
     position: relative;
     overflow: hidden;
     font-family: inherit;
-    font-size: 0.95em;
+    font-size: 1.3rem;
     font-style: normal;
     font-weight: 600;
     line-height: 0.2;
