--- a/src/app/online-casino-software/online-casino-software.component.html
+++ b/src/app/online-casino-software/online-casino-software.component.html
@@ -284,7 +284,7 @@
       </section>
    -->
 
-  <app-contact-com></app-contact-com>
+  <!-- <app-contact-com></app-contact-com> -->
 
 
   <!-- ================FREQ ASK QUE STARTS=============== -->
