--- a/src/app/whitelabel/whitelabel.component.html
+++ b/src/app/whitelabel/whitelabel.component.html
@@ -68,7 +68,7 @@
   <section class="custom-sec">
     <div class="cutom-main">
       <div class="custom-img">
-        <img class="custome_img" src="assets/sirplay vrnl 25.webp" alt="" />
+        <img class="custome_img" src="assets/VRNL 3.webp" alt="" />
       </div>
 
       <div class="head-custom">
