--- a/src/app/whitelabel/whitelabel.component.html
+++ b/src/app/whitelabel/whitelabel.component.html
@@ -120,7 +120,7 @@
       <div class="odd-headimg">
         <img
           class="odds_sec_img"
-          src="assets/different-odds-outcomes.png.webp"
+          src="assets/VRNL 3_odds.webp"
           alt="different-odds-outcomes.png.webp"
         />
       </div>
